Fixed the alignement issues with Products components on the Home page, made it responsive

--- a/src/Home.css
+++ b/src/Home.css
@@ -10,13 +10,14 @@
     width: 100%;
     height: 400px;
     z-index: -1;
-    margin-bottom: -50px;
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1) rgba(0,0,0,0,));
 }
 
 .home_row {
     display: flex;
+    justify-content: center;
     z-index: 1;
     margin-left: 5px;
     margin-right: 5px;
+    width: 100%;
 }
