--- a/src/Product.css
+++ b/src/Product.css
@@ -3,9 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    margin: 20px;
+    margin: 5px;
     padding: 20px;
-    width: 100%;
     max-height: 400px;
     min-width: 100px;
     background-color: white;
@@ -17,10 +16,10 @@
 }
 
 .product > img {
-    max-height: 200px;
+    max-height: 150px;
     width: 100%;
     object-fit: contain;
-    margin: 20px 0 0 15px;
+    margin: 20px 0px 0px 15px;
 }
 
 .product > button {
